<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:backgroundTintMode ="screen"

    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#570B0A0A"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:backgroundTint="#a5a5a1"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#070707"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttonsqure"

                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="#a5a5a1"
                android:onClick="expoBTN"
                android:text="@string/exponent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#070707"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttonbreckets"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#a5a5a1"
                android:onClick="parBTN"
                android:text="@string/parentheses"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#070707"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <ImageButton
                android:id="@+id/buttonbackspace"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#EBEA9823"
                android:contentDescription="@string/backspace"
                android:onClick="backspaceBTN"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                app:srcCompat="@drawable/backspace"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttondiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#EBEA9823"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="foueBTN"
                android:text="@string/four"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttonmul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#EBEA9823"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttonsubtrack"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#EBEA9823"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp">

            <Button
                android:id="@+id/buttondot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#323232"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttonans"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:backgroundTint="#a5a5a1"
                android:onClick="equlBTN"
                android:text="@string/equal"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#070707"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttonadd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#EBEA9823"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffff"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/enter_in_a_value"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>